--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - "**"
-    tags:
-      - "v*"
+  release:
+    types: [published]
 
 permissions:
   packages: write
