fix: ci handling of pr names as tags

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,5 +29,6 @@ jobs:
           source: .
           push: true
         env:
-          IMAGE_TAG: "${{ github.ref_name }}"
+          # Only populate tag on a release
+          IMAGE_TAG: "${{ github.event_name == 'release' && github.ref_name || '' }}"
           IMAGE_SHA: "${{ github.sha }}"
