--- a/examples/op.env
+++ b/examples/op.env
@@ -1,13 +1,12 @@
+# Config / secrets for Terraform provisioning of Cloudflare resources
+TF_VAR_cf_api_token=op://goflarecar/development/CF_API_TOKEN
+TF_VAR_cf_account_id=op://goflarecar/development/CF_ACCOUNT_ID
+TF_VAR_cf_app_domain=op://goflarecar/development/CF_APP_DOMAIN
+TF_VAR_cf_allowed_email=op://goflarecar/development/CF_ALLOWED_EMAIL
+
 # Config / secrets for proxy -> Cloudflare auth validation
 CF_ISSUER_URL=op://goflarecar/development/CF_ISSUER_URL
 CF_AUDIENCE_TAG=op://goflarecar/development/CF_AUDIENCE_TAG
 
 # Secret for Cloudflare -> localhost tunnel
 CF_TUNNEL_TOKEN=op://goflarecar/development/CF_TUNNEL_TOKEN
-
-# Config / secrets for Terraform provisioning of Cloudflare resources
-CLOUDFLARE_API_TOKEN=op://goflarecar/development/CLOUDFLARE_API_TOKEN
-TF_VAR_cf_account_id=op://goflarecar/development/CF_ACCOUNT_ID
-TF_VAR_cf_app_domain=op://goflarecar/development/CF_APP_DOMAIN
-TF_VAR_cf_zone_id=op://goflarecar/development/CF_ZONE_ID
-TF_VAR_cf_allowed_email=op://goflarecar/development/CF_ALLOWED_EMAIL
