Maintenance and usability updates (#3)
* chore: go 1.26, 3rd party deps

* chore: format justfile

* chore: ignore built binary

* chore: add 1pass secret refs for dev

* chore: switch example k8s manifests to loadbalancer style

* ci: enable dependabot action updates

* doc: fill in main README

* doc: start examples README

* chore: move example resources to sub dir

* doc: example k8s manifests

* feat: add tf to configure cloudflare resources

* feat: finish automating, documenting example

--- a/examples/echo_sidecar/service.yaml
+++ b/examples/echo_sidecar/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: echo-sidecar
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app.kubernetes.io/name: echo-sidecar
   ports:
     - name: http
-      port: 80
+      port: 8080
       targetPort: proxy-port
