--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v6
+        with:
+          go-version-file: "go.mod"
       - uses: golangci/golangci-lint-action@v9
       - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v3
